Add disconnected execution environments to doc (#2278)
* Add disconnected execution environments to doc

Move disconnected EE content to builder guide

https://issues.redhat.com/browse/AAP-24986

* Add disconnected execution environments to doc

Correction

Move disconnected EE content to builder guide

https://issues.redhat.com/browse/AAP-24986

* Add disconnected execution environments to doc

Removed link.

Move disconnected EE content to builder guide

https://issues.redhat.com/browse/AAP-24986

* Add disconnected execution environments to doc

Readded link

Move disconnected EE content to builder guide

https://issues.redhat.com/browse/AAP-24986

--- a/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
+++ b/downstream/modules/platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc
@@ -6,7 +6,7 @@
 = Building an {ExecEnvShort} in a disconnected environment
 
 
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_and_consuming_execution_environments/index[Creating execution environments] for {PlatformNameShort} is a common task which works differently in disconnected environments. When building a custom {ExecEnvShort}, the ansible-builder tool defaults to downloading content from the following locations on the internet:
+Creating execution environments for {PlatformNameShort} is a common task which works differently in disconnected environments. When building a custom {ExecEnvShort}, the ansible-builder tool defaults to downloading content from the following locations on the internet:
 
 * Red Hat {HubNameStart} ({Console}) or {Galaxy} (galaxy.ansible.com) for any Ansible content collections added to the {ExecEnvShort} image.
 
@@ -16,7 +16,8 @@ link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_
 
 * registry.redhat.io for access to the base container images.
 
-Building an {ExecEnvShort} image in a disconnected environment requires mirroring content from these locations. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_installation_guide/index#importing-collections-into-private-automation-hub_disconnected-installation[Importing Collections into {PrivateHubName}] for information about importing collections from {Galaxy} or {HubName} into a {PrivateHubName}.
+Building an {ExecEnvShort} image in a disconnected environment requires mirroring content from these locations.
+For information about importing collections from {Galaxy} or {HubName} into a {PrivateHubName}, see link:{URLHubManagingContent}/managing-collections-hub#proc-import-collection[Importing an automation content collection in {HubName}] .
 
 Mirrored PyPI content once transferred into the disconnected network can be made available by using a web server or an artifact repository such as Nexus. The RHEL and UBI repository content can be exported from an internet-facing Red Hat Satellite Server, copied into the disconnected environment, then imported into a disconnected Satellite so it is available for building custom {ExecEnvShort}s. See link:{BaseURL}/red_hat_satellite/{SatelliteVers}/html-single/installing_satellite_server_in_a_disconnected_network_environment/index#iss_export_sync_in_an_air_gapped_scenario[ISS Export Sync in an Air-Gapped Scenario] for details.
 
