--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -26,3 +26,5 @@ include::topics/aap-25-known-issues.adoc[leveloffset=+1]
 include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
 
 include::topics/docs-25.adoc[leveloffset=+1]
+
+include::topics/aap-25-2-patch-release-7-oct-2024.adoc[leveloffset=+1]
