--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -3,7 +3,7 @@
 [[aap-25-2-patch-release-7-oct-2024]]
 
 
-= {PlatformNameShort} 2.5-2 - October 7, 2024
+= {PlatformName} 2.5-2 - October 7, 2024
 
 This release includes a few enhancements and fixes that have been implemented in the Red Hat {PlatformNameShort} 2.5-2.
 
