--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -9,7 +9,7 @@ This release includes a few enhancements and fixes that have been implemented in
 
 == Enhancements
 
-* Event-Driven Ansible workers and scheduler add timeout and retry resilience when communicating with a Redis cluster. (AAP-32139) 
+* {EDAName} workers and scheduler add timeout and retry resilience when communicating with a Redis cluster. (AAP-32139) 
 * Removed the *MTLS* credential type that was incorrectly added. (AAP-31848)
 
 == Fixed issues
