--- a/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-2-patch-release-7-oct-2024.adoc
@@ -44,7 +44,7 @@ This section lists the various errata advisories contained in this release.
 |===
 | Patch release version | Errata advisory 
 
-| Ansible Automation Platform 2.5-2 - October 7, 2024
+| {PlatformNameShort} 2.5-2 - October 7, 2024
 
 |
 link:https://errata.engineering.redhat.com/advisory/139519[RHBA-2024:139519-03 RPM]
