dd-2286 - Fix conversion issues with Update guide

--- a/downstream/modules/platform/proc-update-aap-on-ocp.adoc
+++ b/downstream/modules/platform/proc-update-aap-on-ocp.adoc
@@ -1,9 +1,7 @@
 [id="update-aap-on-ocp"]
 = Updating {PlatformNameShort} on {OCPShort}
 
-Perform a patch update for an installation of {PlatformNameShort} on {OCPShort}.
-
-Most updates happen within a channel:
+When you perform a patch update for an installation of {PlatformNameShort} on {OCPShort}, most updates happen within a channel:
 
 . A new update becomes available in the marketplace (through the redhat-operator CatalogSource).
 
