--- a/downstream/assemblies/platform/assembly-update-rpm.adoc
+++ b/downstream/assemblies/platform/assembly-update-rpm.adoc
@@ -10,6 +10,11 @@ To update your RPM-based {PlatformNameShort}, start by reviewing the update cons
 
 // Concept module for "Update planning"
 include::platform/con-update-planning.adoc[leveloffset=+1]
+include::assembly-choosing-obtaining-installer.adoc[leveloffset=+1]
+include::platform/proc-backup-aap-rpm.adoc[leveloffset=+1]
+include::platform/proc-inventory-file-setup-rpm.adoc[leveloffset=+1]
+include::platform/proc-running-setup-script-for-updates.adoc[leveloffset=+1]
+
 
 // Module for "Choosing and obtaining a Red Hat Ansible Automation Platform installer"
 // And so on
