--- a/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
+++ b/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
@@ -7,7 +7,7 @@ You can run the setup script once you have finished updating the `inventory` fil
 
 .Procedure
 
-. Run the `setup.sh` script
+* Run the `setup.sh` script:
 +
 -----
 $ ./setup.sh
