dd-2286 - peer review fixes and removing extraneous files

--- a/downstream/modules/platform/proc-backup-aap-rpm.adoc
+++ b/downstream/modules/platform/proc-backup-aap-rpm.adoc
@@ -20,4 +20,4 @@ With a successful backup, a backup file is created at `/ansible/mybackup/<platfo
 
 *Additional resources*
 
-* For more information about backup and restore, see link:{URLControllerAdminGuide}/controller-backup-and-restore[Backup and restore] in _{TitleControllerAdminGuide}_.
+* For more information about backing up and restoring, see link:{URLControllerAdminGuide}/controller-backup-and-restore[Backup and restore] in _{TitleControllerAdminGuide}_.
