--- a/downstream/modules/platform/proc-inventory-file-setup-rpm.adoc
+++ b/downstream/modules/platform/proc-inventory-file-setup-rpm.adoc
@@ -2,7 +2,7 @@
 
 = Setting up the inventory file
 
-Before upgrading your {PlatformName} installation, edit the `inventory file so that it matches your desired configuration. You can keep the same parameters from your existing Ansible Automation Platform deployment or you can modify the parameters to match any changes to your environment.
+Before upgrading your {PlatformName} installation, edit the `inventory file so that it matches your desired configuration. You can keep the same parameters from your existing {PlatformNameShort} deployment or you can modify the parameters to match any changes to your environment.
 
 .Procedure
 
@@ -24,5 +24,5 @@ $ cd ansible-automation-platform-setup-<version_number>
 
 [NOTE]
 ====
-Provide a reachable IP address or fully qualified domain name (FQDN) for all hosts to ensure that users can synchronize and install content from Ansible automation hub from a different node. Do not use localhost. If localhost is used, the upgrade will be stopped as part of preflight checks.
+Provide a reachable IP address or fully qualified domain name (FQDN) for all hosts to ensure that users can synchronize and install content from {HubNameMain} from a different node. Do not use localhost. If localhost is used, the upgrade will be stopped as part of preflight checks.
 ====
