--- a/downstream/modules/platform/proc-update-aap-container.adoc
+++ b/downstream/modules/platform/proc-update-aap-container.adoc
@@ -2,7 +2,7 @@
 
 = Updating container-based {PlatformNameShort}
 
-Perform a patch update for a container-based installation of Ansible Automation Platform.
+Perform a patch update for a container-based installation of {PlatformNameShort}.
 
 .Prerequisites
 
@@ -12,7 +12,7 @@ Perform a patch update for a container-based installation of Ansible Automation 
 
 .Procedure
 
-. Download the latest version of the containerized installer from the link:https://access.redhat.com/downloads/content/480/ver=2.5/rhel---9/2.5/x86_64/product-software[{PlatformNameShort} download] page.
+. Download the latest version of the containerized installer from the link:{PlatformDownloadUrl}[{PlatformNameShort} download].
 
 .. For online installations *{PlatformNameShort} {PlatformVers} Containerized Setup*
 
@@ -44,8 +44,7 @@ $ tar xfvz ansible-automation-platform-containerized-setup-bundle-<version>-<arc
 $ ansible-playbook -i inventory ansible.containerized_installer.install
 ----
 +
-* If your privilege escalation requires a password to be entered, append -K to the command. You will then be prompted for the BECOME password.
-* If your privilege escalation requires a password to be entered, append `-K` to the command. You will then be prompted for the `BECOME password.
+* If your privilege escalation requires a password to be entered, append `-K` to the command. You will then be prompted for the `BECOME` password.
 * You can use increasing verbosity, up to 4 v’s (`-vvvv`) to see the details of the installation process. However it is important to note that this can significantly increase installation time, so it is recommended that you use it only as needed or requested by Red Hat support.
 
 The installation will begin.
