added peer review suggestion

--- a/downstream/modules/platform/proc-update-aap-container.adoc
+++ b/downstream/modules/platform/proc-update-aap-container.adoc
@@ -6,6 +6,8 @@ Perform a patch update for a container-based installation of {PlatformNameShort}
 
 .Prerequisites
 
+You have done the following:
+
 * Reviewed the release notes for the associated patch release.
 
 * Created a backup of your {PlatformNameShort} deployment. For more information, see xref:proc-backup-aap-container[Backing up controller-based {PlatformNameShort}].
