Updating UI and links in API overview
Update Automation execution API overview

https://issues.redhat.com/browse/AAP-32935

Affects `title/controller-api-overview`

--- a/downstream/modules/platform/con-controller-api-basic-auth.adoc
+++ b/downstream/modules/platform/con-controller-api-basic-auth.adoc
@@ -24,6 +24,6 @@ You can disable Basic authentication for security purposes.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *Miscellaneous Authentication settings* from the list of *System* options.
-. Disable the option to *Enable HTTP Basic Auth*.
+. From the navigation panel, select {MenuSetGateway}.
+. Click btn:[Edit platform gateway settings].
+. Disable the option *Gateway basic auth enabled*.
