--- a/downstream/modules/platform/con-controller-api-tools.adoc
+++ b/downstream/modules/platform/con-controller-api-tools.adoc
@@ -13,6 +13,7 @@ Further options include the following:
 
 * link:http://www.telerik.com/fiddler[Fiddler]
 * link:https://mitmproxy.org/[mitmproxy]
-* link:https://addons.mozilla.org/en-US/firefox/addon/live-http-headers/[Live HTTP headers FireFox extension]
-* link:http://sourceforge.net/projects/paros/[Paros]
+// * [emcwhinn] Link deprecated
+// link:https://addons.mozilla.org/en-US/firefox/addon/live-http-headers/[Live HTTP headers FireFox extension]
+//* link:https://sourceforge.net/projects/paros/[Paros]
 
