--- a/downstream/assemblies/platform/assembly-metrics-utility.adoc
+++ b/downstream/assemblies/platform/assembly-metrics-utility.adoc
@@ -9,7 +9,7 @@ ifdef::context[:parent-context-of-metrics-utility: {context}]
 
 :context: metrics-utility
 
-= About Ansible automation platform metrics-utility
+= Subscription consumption
 
 The {PlatformNameShort} metrics utility tool (metrics-utility) is a command-line utility that is installed on a system containing an instance of {ControllerName}. 
 
@@ -19,28 +19,28 @@ Metrics-utility collects two types of data from your system: configuration data 
 
 The configuration data includes the following information:
 
-* version information for automation controller and for the operating system 
-* subscription information
-* the base URL
+* Version information for {ControllerName} and for the operating system 
+* Subscription information
+* The base URL
 
 The reporting data includes the following information:
 
-* job name and ID
-* host name
-* inventory name 
-* organization name 
-* project name 
-* success or failure information
-* the date and time the report was generated.  
+* Job name and ID
+* Host name
+* Inventory name 
+* Organization name 
+* Project name 
+* Success or failure information
+* The date and time the report was generated.  
 
 To ensure that metrics-utility continues to work as configured, be sure to clear your report directories of outdated reports regularly. 
 
 
-include::platform/proc_configuring-the-metrics-utility.adoc[leveloffset=+1]
-include::platform/ref_fetching-a-monthly-report.adoc[leveloffset=+1]
-include::platform/proc_modifying-the-run-schedule.adoc[leveloffset=+1]
+include::platform/proc-configuring-the-metrics-utility.adoc[leveloffset=+1]
+include::platform/ref-fetching-a-monthly-report.adoc[leveloffset=+1]
+include::platform/proc-modifying-the-run-schedule.adoc[leveloffset=+1]
 
 
-//ifdef::parent-context-of-metrics-utility[:context: {parent-context-of-metrics-utility}]
-//ifndef::parent-context-of-metrics-utility[:!context:]
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
 
