--- a/downstream/modules/platform/proc-configuring-the-metrics-utility.adoc
+++ b/downstream/modules/platform/proc-configuring-the-metrics-utility.adoc
@@ -3,7 +3,7 @@
 :_mod-docs-content-type: PROCEDURE
 
 [id="configuring-the-metrics-utility_{context}"]
-= configuring-the-metrics-utility
+= Configuring metrics-utility
 
 
 == On RHEL 
@@ -171,28 +171,3 @@ The relevant parameters for metrics-utility are the following:
 . Find the `metrics_utility_cronjob_gather_schedule` parameter and enter a variable for how often the utility should gather usage information (for example, @hourly or @daily). 
 . Find the `metrics_utility_cronjob_report_schedule` parameter and enter a variable for how often the utility generates a report (for example, @daily or @monthly).
 . Click btn:[Create].
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-== NewDoc
-
-[role="_additional-resources"]
-.Additional resources
-
-* This section is optional.
-* Provide a bulleted list of links to other closely-related material. These links can include `link:` and `xref:` macros.
-* Use an unnumbered bullet (*) if the list includes only one step.
-
