--- a/downstream/modules/platform/ref_fetching-a-monthly-report.adoc
+++ b/downstream/modules/platform/ref_fetching-a-monthly-report.adoc
@@ -4,7 +4,7 @@
 :_mod-docs-content-type: REFERENCE
 
 [id="fetching-a-monthly-report_{context}"]
-= fetching-a-monthly-report
+= Fetching a monthly report
 
 
 == On RHEL
@@ -17,9 +17,9 @@ scp -r username@controller_host:$METRICS_UTILITY_SHIP_PATH/data/<YYYY>/<MM>/ /lo
 
 The generated report will have the default name CCSP-<YEAR>-<MONTH>.xlsx and will be deposited in the ship path that you specified.
 
-== On Openshift Container Platform from the AAP operator
+== On {OCPShort} from the {PlatformNameShort} operator
 
-Use the following playbook to fetch a monthly consumption report for AAP on Openshift Container Platform:
+Use the following playbook to fetch a monthly consumption report for {PlatformNameShort} on {OCPShort}:
 
 [source, ]
 ----
@@ -104,59 +104,3 @@ Use the following playbook to fetch a monthly consumption report for AAP on Open
         name: temp-pod
         state: absent
 ----
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.Labeled list
-Term 1:: Definition
-Term 2:: Definition
-
-.Table
-[options="header"]
-|====
-|Column 1|Column 2|Column 3
-|Row 1, column 1|Row 1, column 2|Row 1, column 3
-|Row 2, column 1|Row 2, column 2|Row 2, column 3
-|====
-
-
-
