edits master.adoc

--- a/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
+++ b/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
@@ -29,7 +29,7 @@ ty build_report
 +
 . Save and close the file.
 
-== On Openshift Container Platform from the AAP operator 
+== On {OCPShort} from the {PlatformNameShort} operator 
 .Procedure
 
 . From the navigation panel, select *Workloads > Deployments*.
