Updates to updating-aap
Performing a sanity check of titles/updating-aap.
Correcting typos, removing unncessary comments etc.

Document 2.5 to 2.5.x upgrade steps

https://issues.redhat.com/browse/AAP-31734

--- a/downstream/assemblies/platform/assembly-update-container.adoc
+++ b/downstream/assemblies/platform/assembly-update-container.adoc
@@ -3,11 +3,7 @@
 = Container-based {PlatformNameShort}
 
 
-To update your RPM-based {PlatformNameShort}, start by reviewing the update considerations. You can then download the latest version of the {PlatformNameShort} installer, configure the `inventory` file in the installation bundle to reflect your environment, and then run the installer.
-
-// Modules go here
-// Example:
-// include::platform/<module_file_name>.adoc[leveloffset=+1]
+To update your container-based {PlatformNameShort}, start by reviewing the update considerations. You can then download the latest version of the {PlatformNameShort} installer, configure the `inventory` file in the installation bundle to reflect your environment, and then run the installer.
 
 include::platform/proc-update-aap-container.adoc[leveloffset=+1]
 include::platform/proc-backup-aap-container.adoc[leveloffset=+1]
