--- a/downstream/modules/platform/proc-backup-aap-rpm.adoc
+++ b/downstream/modules/platform/proc-backup-aap-rpm.adoc
@@ -4,12 +4,12 @@
 
 Back up an existing {PlatformNameShort} instance by running the `setup.sh` script with the `backup_dir` flag, which saves the content and configuration of your current environment:
 
-. Go to your Ansible Automation Platform installation directory.
+. Go to your {PlatformNameShort} installation directory.
 
 . Run the `setup.sh` script following the example below:
 +
 ----
-$ ./setup.sh -e ‘backup_dir=/ansible/mybackup’ -e ‘use_compression=True’ @credentials.yml -b
+$ ./setup.sh -e 'backup_dir=/ansible/mybackup' -e 'use_compression=True' @credentials.yml -b
 ----
 +
 * `backup_dir` specifies a directory to save your backup to.
