--- a/downstream/modules/platform/proc-inventory-file-setup-rpm.adoc
+++ b/downstream/modules/platform/proc-inventory-file-setup-rpm.adoc
@@ -2,7 +2,7 @@
 
 = Setting up the inventory file
 
-Before upgrading your {PlatformName} installation, edit the `inventory file so that it matches your desired configuration. You can keep the same parameters from your existing {PlatformNameShort} deployment or you can modify the parameters to match any changes to your environment.
+Before upgrading your {PlatformName} installation, edit the `inventory` file so that it matches your desired configuration. You can keep the same parameters from your existing {PlatformNameShort} deployment or you can modify the parameters to match any changes to your environment.
 
 .Procedure
 
