--- a/downstream/modules/platform/proc-backup-aap-container.adoc
+++ b/downstream/modules/platform/proc-backup-aap-container.adoc
@@ -6,7 +6,7 @@ Perform a back up of your container-based {PlatformNameShort} installer.
 
 .Procedure
 
-. Go to the {PlatformName} installation directory on your RHEL host.
+. Go to the {PlatformName} installation directory on your {RHEL} host.
 
 . Run the `backup.yml` playbook:
 +
