--- a/downstream/modules/platform/con-controller-api-oauth2-token.adoc
+++ b/downstream/modules/platform/con-controller-api-oauth2-token.adoc
@@ -88,7 +88,7 @@ print(json.dumps(response.json(), indent=4, sort_keys=True))
 
 .Additional resources
 
-For more information about obtaining OAuth2 access tokens and how to use OAuth 2 in the context of external applications, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-token-based-authentication[Token-Based Authentication] in the _{ControllerAG}_.
+For more information about obtaining OAuth2 access tokens and how to use OAuth 2 in the context of external applications, see link:{URLCentralAuth}/gw-token-based-authentication[Configuring access to external applications with token-based authentication].
 
 [discrete]
 == Enabling external users to create OAuth 2 tokens
