Updating title attributes (#2299)

--- a/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
+++ b/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
@@ -27,7 +27,7 @@ When an instance of {HubName} is removed, the PVCs are not automatically deleted
 
 == Prerequisites
 
-* You have installed the {PlatformName} operator in Operator Hub.
+* You have installed the {OperatorPlatformNameShort} in Operator Hub.
 
 == Installing the {HubName} operator
 Use this procedure to install the {HubName} operator.
