--- a/downstream/modules/platform/proc-aap-controller-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-backup.adoc
@@ -7,14 +7,14 @@ Use this procedure to back up a deployment of the controller, including jobs, in
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {OperatorPlatform} has been installed to the cluster.
-* The {ControllerName} is deployed to using the {OperatorPlatform}.
+* You must be authenticated with an OpenShift cluster.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed {ControllerName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Controller Backup* tab.
 . Click btn:[Create AutomationControllerBackup].
 . Enter a *Name* for the backup.
@@ -45,7 +45,7 @@ A backup tarball of the specified deployment is created and available for data r
 .Verification
 . Log in to Red Hat *{OCP}*
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort}.
 . Select the *AutomationControllerBackup* tab.
 . Select the backup resource you want to verify.
 . Scroll to *Conditions* and check that the *Successful* status is `True`.
