--- a/downstream/modules/platform/proc-aap-controller-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-restore.adoc
@@ -21,7 +21,7 @@ If the backup custom resource being restored is a backup of a currently running 
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Controller Restore* tab.
 . Click btn:[Create AutomationControllerRestore].
 . Enter a *Name* for the recovery deployment.
@@ -42,7 +42,7 @@ A new deployment is created and your backup is restored to it. This can take app
 .Verification
 . Log in to Red Hat *{OCP}*
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *AutomationControllerRestore* tab.
 . Select the restore resource you want to verify.
 . Scroll to *Conditions* and check that the *Successful* status is `True`.
