--- a/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
@@ -8,9 +8,8 @@ See the following procedure for how to back up a deployment of the {ControllerNa
 
 
 * You must be authenticated with an OpenShift cluster.
-
-* The {OperatorPlatform} has been installed to the cluster.
-* The {ControllerName} is deployed to using the {OperatorPlatform}.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed {ControllerName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 
