--- a/downstream/modules/platform/proc-aap-hub-backup.adoc
+++ b/downstream/modules/platform/proc-aap-hub-backup.adoc
@@ -7,14 +7,14 @@ Use this procedure to back up a deployment of the hub, including all hosted Ansi
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {OperatorPlatform} has been installed to the cluster.
-* The {HubName} is deployed to using the {OperatorPlatform}.
+* You must be authenticated with an OpenShift cluster.
+* You have installed {OperatorPlatformNameShort} on the cluster.
+* You have deployed {HubName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Hub Backup* tab.
 . Click btn:[Create AutomationHubBackup].
 . Enter a *Name* for the backup.
