--- a/downstream/modules/platform/proc-installing-hub-using-operator.adoc
+++ b/downstream/modules/platform/proc-installing-hub-using-operator.adoc
@@ -1,14 +1,15 @@
 [id="proc-installing-hub-using-operator_{context}"]
 
-= Installing {HubName} using the Operator
+= Installing {HubName} using the {OperatorPlatformNameShort}
 
-Use the following procedure to install {HubName} using the operator.
+Use the following procedure to install {HubName} using the {OperatorPlatformNameShort}.
 
 .Procedure
 
 . Navigate to menu:Operator[Installed Operators].
-. Select the {PlatformNameShort}.
-. Select the {HubNameStart} tab and click btn:[Create {HubNameStart}].
+. Select your {OperatorPlatformNameShort} deployment.
+. Select the {HubNameStart} tab.
+. Click btn:[Create {HubNameStart}].
 . Select btn:[YAML view].
 The YAML should be similar to:
 +
