--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -9,7 +9,13 @@ ifdef::context[:parent-context: {context}]
 
 [role="_abstract"]
 
-Backing up your {PlatformName} deployment involves creating backup resources for your deployed {HubName} and {ControllerName} instances. Use these procedures to create backup resources for your {PlatformName} deployment.
+Backing up your {PlatformName} deployment involves creating backup resources for your deployed instances. 
+Use the following procedures to create backup resources for your {PlatformName} deployment. 
+We recommend taking backups before upgrading the {OperatorPlatformNameShort}. 
+Take a backup regularly in case you want to restore the platform to a previous state.
+
+
+
 
 include::platform/proc-aap-controller-backup.adoc[leveloffset=+1]
 
