--- a/downstream/modules/platform/con-about-operator.adoc
+++ b/downstream/modules/platform/con-about-operator.adoc
@@ -1,13 +1,16 @@
 [id="con-about-operator_{context}"]
 
-= About {OperatorPlatform}
+= About {OperatorPlatformNameShort}
 
 [role="_abstract"]
-The {OperatorPlatform} provides cloud-native, push-button deployment of new {PlatformNameShort} instances in your OpenShift environment.
-The {OperatorPlatform} includes resource types to deploy and manage instances of {ControllerNameStart} and {PrivateHubName}.
+The {OperatorPlatformNameShort} provides cloud-native, push-button deployment of new {PlatformNameShort} instances in your OpenShift environment.
+The {OperatorPlatformNameShort} includes resource types to deploy and manage instances of {ControllerName} and {PrivateHubName}.
 It also includes {ControllerName} job resources for defining and launching jobs inside your {ControllerName} deployments.
 
 Deploying {PlatformNameShort} instances with a Kubernetes native operator offers several advantages over launching instances from a playbook deployed on {OCP}, including upgrades and full lifecycle support for your {PlatformName} deployments.
 
-You can install the {OperatorPlatform} from the Red Hat Operators catalog in OperatorHub.
+You can install the {OperatorPlatformNameShort} from the Red Hat Operators catalog in OperatorHub.
+
+For information about the {OperatorPlatformNameShort} infrastructure topology see {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/index#container-topologies[Container topologies] in _{TitleTopologies}_.
+
 
