--- a/downstream/modules/platform/con-ocp-supported-install.adoc
+++ b/downstream/modules/platform/con-ocp-supported-install.adoc
@@ -3,11 +3,11 @@
 = Supported installation scenarios for {OCP}
 
 
-You can use the OperatorHub on the {OCP} web console to install {OperatorPlatform}.
+You can use the OperatorHub on the {OCP} web console to install {OperatorPlatformNameShort}.
 
-Alternatively, you can install {OperatorPlatform} from the {OCPShort} command-line interface (CLI), `oc`.
+Alternatively, you can install {OperatorPlatform} from the {OCPShort} command-line interface (CLI), `oc`. 
 
-Follow one of the workflows below to install the {OperatorPlatform} and use it to install the components of {PlatformNameShort} that you require.
+Follow one of the workflows below to install the {OperatorPlatformNameShort} and use it to install the components of {PlatformNameShort} that you require.
 
 * {ControllerNameStart} custom resources first, then {HubName} custom resources;
 * {HubNameStart} custom resources first, then {ControllerName} custom resources;
