--- a/downstream/modules/platform/proc-aap-hub-restore.adoc
+++ b/downstream/modules/platform/proc-aap-hub-restore.adoc
@@ -19,7 +19,7 @@ The name specified for the new AutomationHub custom resource must not match an e
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
-. Select the {OperatorPlatform} installed on your project namespace.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Automation Hub Restore* tab.
 . Click btn:[Create AutomationHubRestore].
 . Enter a *Name* for the recovery deployment.
