--- a/downstream/modules/platform/proc-hub-ingress-options.adoc
+++ b/downstream/modules/platform/proc-hub-ingress-options.adoc
@@ -2,10 +2,16 @@
 
 = Configuring the Ingress type for your {HubName} operator
 
-The {PlatformName} operator installation form allows you to further configure your {HubName} operator Ingress under *Advanced configuration*.
+The {OperatorPlatformNameShort} installation form allows you to further configure your {HubName} operator ingress under *Advanced configuration*.
 
 .Procedure
 
+. Log in to {OCP}.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatformNameShort} deployment.
+. Select the *Automation Hub* tab. 
+. For new instances, click btn:[Create AutomationHub].
+.. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AutomationHub].
 . Click btn:[Advanced Configuration].
 . Under *Ingress type*, click the drop-down menu and select *Ingress*.
 . Under *Ingress annotations*, enter any annotations to add to the ingress.
