--- a/downstream/modules/platform/proc-install-cli-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-cli-aap-operator.adoc
@@ -8,6 +8,12 @@
 
 Use this procedure to subscribe a namespace to an operator.
 
+[IMPORTANT]
+====
+You can only subscribe a single instance of the {OperatorPlatformNameShort} into a single namespace. 
+Subscribing multiple instances in the same namespace can lead to improper operation for both operator instances. 
+====
+
 .Procedure
 
 . Create a project for the operator
