--- a/downstream/modules/platform/proc-operator-external-db-controller.adoc
+++ b/downstream/modules/platform/proc-operator-external-db-controller.adoc
@@ -1,12 +1,12 @@
 
 [id="proc-operator-external-db-controller"]
 
-= Configuring an external database for {ControllerName} on {PlatformName} operator
+= Configuring an external database for {ControllerName} on {OperatorPlatformName}
 
 [role="_abstract"]
 For users who prefer to deploy {PlatformNameShort} with an external database, they can do so by configuring a secret with instance credentials and connection information, then applying it to their cluster using the `oc create` command.
 
-By default, the {PlatformName} operator automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment. You can deploy {PlatformNameShort} with an external database instead of the managed PostgreSQL pod that the {PlatformName} operator automatically creates.
+By default, the {OperatorPlatformNameShort} automatically creates and configures a managed PostgreSQL pod in the same namespace as your {PlatformNameShort} deployment. You can deploy {PlatformNameShort} with an external database instead of the managed PostgreSQL pod that the {OperatorPlatformNameShort} automatically creates.
 
 Using an external database lets you share and reuse resources and manually manage backups, upgrades, and performance optimizations.
 
@@ -15,7 +15,7 @@ Using an external database lets you share and reuse resources and manually manag
 The same external database (PostgreSQL instance) can be used for both {HubName} and {ControllerName} as long as the database names are different. In other words, you can have multiple databases with different names inside a single PostgreSQL instance.
 ====
 
-The following section outlines the steps to configure an external database for your {ControllerName} on a {PlatformNameShort} operator.
+The following section outlines the steps to configure an external database for your {ControllerName} on a {OperatorPlatformNameShort}.
 
 .Prerequisite
 The external database must be a PostgreSQL database that is the version supported by the current release of {PlatformNameShort}.
