--- a/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
+++ b/downstream/assemblies/platform/assembly-installing-aap-operator-cli.adoc
@@ -8,7 +8,7 @@ See also the complementary step on the last line of this file.
 
 ifdef::context[:parent-context: {context}]
 
-[id="installing-aap-operator-cli"]
+[id="installing-aap-operator-cli_{Context}"]
 = Installing {OperatorPlatformName}  from the {OCPShort} CLI
 
 :context: installing-aap-operator-cli
